--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,7 @@ h3{
  padding: 2%;
 }
 
-ul{
-    list-style-type: none;
-    padding: 0;
-}
-
 li{
-    background: #f6f6f6;
-    border-bottom: 1px solid #e6e6e6;
     font-size: 16px;
 }
 li span{
@@ -25,4 +18,7 @@ li span{
 }
 .cross {
     cursor: pointer;
+}
+ul.collapsible li {
+    margin: 1%;
 }
